[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "check_utils"
version = "0.1.5_dev"
dependencies = [
    "rich",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-mock",
]
tests-extra = [
    "flake8",
    "pytest-cov",
]
html = [
    "junit2html",
]

[project.scripts]
cucheck = "check_utils.entry.check:main"
cuparse_automake = "check_utils.entry.parse_automake:main"
cuparse_ctest = "check_utils.entry.parse_ctest:main"
cuparse_tap = "check_utils.entry.parse_tap:main"

[tool.pylint."MESSAGES CONTROL"]

confidence = ''

disable = '''
          fixme,
          line-too-long,
          unnecessary-pass,
          too-many-arguments,
          too-many-positional-arguments,
          too-few-public-methods,
          too-many-locals,
          use-dict-literal
          '''
